[gd_scene load_steps=17 format=3 uid="uid://b62brjy8hn4tk"]

[ext_resource type="Texture2D" uid="uid://b2x1ct26rydyq" path="res://assets/snowysky.png" id="1_v0s2s"]
[ext_resource type="Script" path="res://scenes/extra_menu.gd" id="1_x86kb"]
[ext_resource type="Shader" path="res://scripts/water.gdshader" id="2_78mnn"]
[ext_resource type="Texture2D" uid="uid://bknh7ot71x1sb" path="res://assets/ocean.png" id="3_vjsnc"]
[ext_resource type="FontFile" uid="uid://kg2w0sgacegs" path="res://assets/fonts/8bitoperator_jve.ttf" id="5_d1c56"]
[ext_resource type="Texture2D" uid="uid://d2yxsh2jpdco1" path="res://assets/facescreaminginfearemoji.png" id="6_77sy6"]
[ext_resource type="Texture2D" uid="uid://bs572n88yem23" path="res://assets/checkboxticked.png" id="7_ypg7p"]
[ext_resource type="Texture2D" uid="uid://bs3srnwbkdq3m" path="res://assets/checkbox.png" id="8_r2ufa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iltts"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3gns7"]
shader = ExtResource("2_78mnn")
shader_parameter/amplitude_px = 2.0
shader_parameter/period = 2.2
shader_parameter/travel_speed_cols = 96.0
shader_parameter/wrap_vertical = false
shader_parameter/highlight_strength = 0.08
shader_parameter/highlight_width_cols = 6.0
shader_parameter/highlight_speed_cols = 120.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r6nv7"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsduw"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_laqet"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fb0hx"]
resource_name = "enter"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6dhw6"]
resource_name = "exit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_to_main"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y43hq"]
_data = {
"RESET": SubResource("Animation_laqet"),
"enter": SubResource("Animation_fb0hx"),
"exit": SubResource("Animation_6dhw6")
}

[node name="ExtraMenu" type="CanvasLayer"]
script = ExtResource("1_x86kb")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BG" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_v0s2s")

[node name="WaterHolder" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -959.0
offset_top = -151.0
offset_right = 977.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_iltts")

[node name="Sprite2D" type="Sprite2D" parent="Control/WaterHolder"]
self_modulate = Color(0.540262, 0.861886, 0.960313, 1)
material = SubResource("ShaderMaterial_3gns7")
position = Vector2(-3, -11)
scale = Vector2(6.06995, 5.125)
texture = ExtResource("3_vjsnc")
centered = false

[node name="BackButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(225, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -159.0
offset_top = 19.0
offset_right = -25.0
offset_bottom = 100.0
grow_horizontal = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("5_d1c56")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_r6nv7")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = 1.0
offset_right = -997.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(360, 140)
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_fonts/normal_font = ExtResource("5_d1c56")
theme_override_font_sizes/normal_font_size = 110
text = "Extra"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Author" type="RichTextLabel" parent="Control/VBoxContainer/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(560, 75)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("5_d1c56")
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/normal_font_size = 64
text = "Game made by Daniel T"

[node name="Emoji" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Control/VBoxContainer/HBoxContainer/Emoji"]
position = Vector2(47, 41)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_77sy6")

[node name="text" type="RichTextLabel" parent="Control/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(560, 250)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("5_d1c56")
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[rainbow sat=0.5]Controls:[/rainbow]
Interact : Z/Mouse Button Left
Cast Rod  : Z/Mouse Button Left
Move          : WASD/Arrow Keys
Inventory : E/I
"
fit_content = true
scroll_active = false

[node name="CoolButton" type="CheckBox" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("5_d1c56")
theme_override_font_sizes/font_size = 56
theme_override_icons/checked = ExtResource("7_ypg7p")
theme_override_icons/unchecked = ExtResource("8_r2ufa")
text = ":D"

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tsduw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y43hq")
}

[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="Control/VBoxContainer/CoolButton" to="." method="_on_cool_button_toggled"]
